Seconds need to be aligned left to prevent explosions from happening

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ textarea {
 }
 
 #sec {
-    text-align: center;
+    text-align: left;
 }
 
 #measure {
